# My-workspace

./: .gitignore  CLAUDE.md  My-workspace.code-workspace  requirements.txt  ruff.toml
de_Funk/: .gitignore  CLAUDE.md  Useful command.md  debug_output.txt  environment.yml  pyproject.toml  pytest.ini  requirements.txt
de_Funk/.obsidian/: community-plugins.json  workspace.json
de_Funk/configs/: cluster.yaml  run_config.json  storage.json
de_Funk/data_sources/: API Endpoint Index.md  API Provider Index.md  API – Provider Coverage.md  Storage Routing.md
de_Funk/data_sources/Providers/: Alpha Vantage.md  Chicago Data Portal.md  Cook County Data Portal.md
de_Funk/data_sources/_Templates/: API Endpoint Template.md  API Provider Template.md  Alpha Vantage Endpoint Template.md  Socrata Endpoint Template.md  Socrata Multi-Year Endpoint Template.md
de_Funk/docs/: MACHINE_SETUP.md  README.md  api.md  architecture.md  data-pipeline.md  domain-models.md  internals.md  obsidian-plugin.md  operations.md  python-reference.md  quickstart.md
de_Funk/exhibits/: _index.md
de_Funk/obsidian-plugin/: esbuild.config.mjs  package-lock.json  package.json  styles.css  tsconfig.json
de_Funk/scripts/: README.md  __init__.py
de_Funk/tests/: README.md  conftest.py  diagnose_stocks_tab.py  pipeline_tester.py  quick_parse_test.py  spark_stress_test.py  test_alpha_vantage_api.py  test_base_measure.py  test_duckdb_auto_init.py  test_duckdb_missing_columns.py  test_duckdb_setup.py  test_notebook_rendering.py  test_path_resolution.py  test_pipeline.sh  test_storage_service.py  test_storage_service_caching.py  validate_all_scripts.py  validate_filter_system.py  validate_logging_framework.py  validate_notebook_references.py  validate_silver_columns.py
(+637 files in other folders)
